ingress_controllers/loadBalancerDaemonSet.yml
apiVersion: v1
kind: Service
metadata:
  name: javawebapppodsv
  namespace: agunuworld
spec:
  type: LoadBalancer
  selector:
    app: javawebapp
  ports:
  - port: 80
    targetPort: 8080
