ingress_controllers/replicasetLB.yml
apiVersion: v1
kind: Service
metadata:
  name: mavenwebapppodsvc
  namespace: agunuworld4
spec:
  type: ClusterIP
  selector:
    app: mavenwebapp
  ports:
  - port: 80
    targetPort: 8080
