ingress_controllers/springbootMongoLB.yml
# Load Balancer Service
apiVersion: v1
kind: Service
metadata:
  labels:
    name: springboot
  name: springboot
  namespace: agunuworld4
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: springboot

---
# Mongo Node Port RC
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo
  namespace: agunuworld4
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
...
